--- a/.travis.yml
+++ b/.travis.yml
@@ -30,3 +30,4 @@ after_success:
   - git push --force --quiet "https://${GITHUB_API_KEY}@${GH_REF}" main:gh-pages
   - echo $RESULT
   - bash ./telegram_notification.sh
+  - bash telegram_notification.sh
